--- a/Hotel/View_layer/ViewProviders.xaml
+++ b/Hotel/View_layer/ViewProviders.xaml
@@ -20,17 +20,22 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0"
-                                    Orientation="Horizontal"
-                                    VerticalAlignment="Center">
+                                    Orientation="Horizontal">
+                <StackPanel.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                        <GradientStop Color="{StaticResource degradadooro1}" Offset="0"/>
+                        <GradientStop Color="{StaticResource degradadooro5}" Offset="1"/>
+                    </LinearGradientBrush>
+                </StackPanel.Background>
                 <fa:IconImage Icon="Dolly"
                                           Height="24"
                                           Width="24"
-                                          Foreground="{StaticResource tittleColor1}"
+                                          Foreground="{StaticResource tittleColor4}"
                                           Margin="35,0,10,0"/>
                 <TextBlock Text="Proveedores"
-                                       Foreground="{StaticResource tittleColor1}"
-                                       FontSize="16"
-                                       FontFamily="Alegreya Medium"
+                                       Foreground="{StaticResource tittleColor4}"
+                                       FontSize="17"
+                                       FontFamily="Alegreya Bold"
                                        VerticalAlignment="Center"/>
 
             </StackPanel>
@@ -82,6 +87,8 @@
                             <Style.Triggers>
                                 <Trigger Property="IsSelected" Value="True">
                                     <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                    <Setter Property="Foreground" Value="White"/>
+                                    <Setter Property="FontSize" Value="14"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -103,9 +110,9 @@
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
                             <Setter Property="SeparatorVisibility" Value="Visible"/>
-                            <Setter Property="Background" Value="{StaticResource tittleColor1}"/>
+                            <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
                             <Setter Property="Height" Value="30"/>
-                            <Setter Property="FontFamily" Value="Alegreya"/>
+                            <Setter Property="FontFamily" Value="Alegreya Medium"/>
                             <Setter Property="FontSize" Value="15"/>
                             <Setter Property="Padding" Value="15 0 15 0"/>
                         </Style>
