--- a/Hotel/View_layer/ViewProduct.xaml
+++ b/Hotel/View_layer/ViewProduct.xaml
@@ -6,12 +6,12 @@
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              xmlns:local="clr-namespace:Hotel.View_layer"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="800">
+             d:DesignHeight="640" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="230"/>
             <RowDefinition Height="190"/>
-            <RowDefinition Height="200"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -38,13 +38,15 @@
             <DataGrid x:Name="listBoxCotizaciones" AutoGenerateColumns="False" Margin="10 0 10 10" 
           Background="{StaticResource tittleColor5}" SelectionChanged="listBoxCotizaciones_SelectionChanged"
            IsReadOnly="True" VerticalGridLinesBrush="{StaticResource tittleColor1}" HorizontalGridLinesBrush="{StaticResource tittleColor1}" HeadersVisibility="Column">
-
+                
                 <DataGrid.Resources>
                     <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="{StaticResource BlankColor2 }" />
                     <Style TargetType="DataGridCell">
                         <Style.Triggers>
                             <Trigger Property="IsSelected" Value="True">
                                 <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                <Setter Property="Foreground" Value="White"/>
+                                <Setter Property="FontSize" Value="14"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -52,6 +54,7 @@
                         <Style.Triggers>
                             <Trigger Property="IsSelected" Value="True">
                                 <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                <Setter Property="FontSize" Value="14"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -64,13 +67,14 @@
                     <DataGridTextColumn Header="Tamaño" Binding="{Binding Tamaño}" Width="*"/>
                     <DataGridTextColumn Header="Categoria" Binding="{Binding Categoria.NombreCategoria}" Width="*"/>
                     <DataGridTextColumn Header="Proveedor" Binding="{Binding Proveedor.NombreProv}" Width="*"/>
+
                 </DataGrid.Columns>
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="SeparatorVisibility" Value="Visible"/>
-                        <Setter Property="Background" Value="{StaticResource tittleColor1}"/>
+                        <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
                         <Setter Property="Height" Value="30"/>
-                        <Setter Property="FontFamily" Value="Alegreya"/>
+                        <Setter Property="FontFamily" Value="Alegreya Medium"/>
                         <Setter Property="FontSize" Value="15"/>
                         <Setter Property="Padding" Value="15 0 15 0"/>
                     </Style>
@@ -145,6 +149,7 @@
                     <Label Content="Proveedor:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14"/>
                     <ComboBox x:Name="cmbProveedor" Width="320" DisplayMemberPath="NombreProv"/>
                 </StackPanel>
+                
             </StackPanel>
         </Grid>
         <Grid Grid.Row="3">
