--- a/Hotel/View_layer/ViewOrder.xaml
+++ b/Hotel/View_layer/ViewOrder.xaml
@@ -8,6 +8,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-
+        <Image Source="/View_layer/Images/MarcaDeAgua2.png"/>
     </Grid>
 </UserControl>
