Arquitectura por capas actualizada, Funcionalidad de estados listo, Vista detalles compra funcionando

--- a/Hotel/View_layer/ViewOrder.xaml
+++ b/Hotel/View_layer/ViewOrder.xaml
@@ -81,7 +81,7 @@
         <Grid Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="center">
                 <Button Content="Proseguir Orden"
-                            
+                            Click="CambiarEstadoButton_Click"
                             Width="130"
                             Height="40"
                             Margin="10"
