--- a/Hotel/View_layer/ModalDetalleCompra.xaml
+++ b/Hotel/View_layer/ModalDetalleCompra.xaml
@@ -3,19 +3,121 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
         xmlns:local="clr-namespace:Hotel.View_layer"
         mc:Ignorable="d"
-        Title="ModalDetalleCompra" Height="450" Width="800">
-    <Grid>
-        <DataGrid x:Name="tablaDetalleCompra" AutoGenerateColumns="False" IsReadOnly="True" HeadersVisibility="Column">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="ID Producto" Binding="{Binding ID_Producto}" />
-                <DataGridTextColumn Header="Cantidad" Binding="{Binding Cantidad}" />
-                <!-- Agrega más columnas según tus necesidades -->
-            </DataGrid.Columns>
-        </DataGrid>
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        Background="Transparent"
+        AllowsTransparency="True"
+        Title="ModalDetalleCompra" Height="450" Width="400">
+    <Border CornerRadius="5"
+            BorderThickness="5">
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{StaticResource degradadooro1}" Offset="0"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.112"/>
+                <GradientStop Color="{StaticResource degradadooro1}" Offset="0.221"/>
+                <GradientStop Color="{StaticResource degradadooro1}" Offset="0.205"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.165"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.627"/>
+                <GradientStop Color="{StaticResource degradadooro1}" Offset="0.538"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.482"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.378"/>
+                <GradientStop Color="{StaticResource degradadooro3}" Offset="0.763"/>
+                <GradientStop Color="{StaticResource degradadooro4}" Offset="0.803"/>
+                <GradientStop Color="{StaticResource degradadooro1}" Offset="0.631"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.663"/>
+                <GradientStop Color="{StaticResource degradadooro4}" Offset="0.092"/>
+                <GradientStop Color="{StaticResource degradadooro5}" Offset="0.916"/>
+                <GradientStop Color="{StaticResource degradadooro2}" Offset="0.863"/>
+                <GradientStop Color="{StaticResource degradadooro6}" Offset="0.948"/>
+            </LinearGradientBrush>
+        </Border.BorderBrush>
+        <Border.Background>
+            <LinearGradientBrush StartPoint="1,1" EndPoint="0,0">
+                <GradientStop Color="{StaticResource BlankColor1}" Offset="0"/>
+                <GradientStop Color="{StaticResource BlankColor2}" Offset="1"/>
+            </LinearGradientBrush>
+        </Border.Background>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="70"/>
+            </Grid.RowDefinitions>
 
-        <Button Content="Cerrar" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10"
-                Width="100" Click="Cerrar_Click" />
-    </Grid>
+            <Grid Grid.Row="0" HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <fa:IconImage Grid.Column="0" Margin="10"
+                  Icon="Dolly"
+                  Height="27"
+                  Width="27"
+                  Foreground="{StaticResource tittleColor6}"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center"/>
+
+                <TextBlock Grid.Column="1" Margin="8"
+               Text="Detalles de la Compra"
+               Foreground="{StaticResource tittleColor6}"
+               FontSize="17"
+               FontFamily="Alegreya Bold"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"/>
+            </Grid>
+
+
+            <DataGrid x:Name="tablaDetalleCompra" AutoGenerateColumns="False" Grid.Row="1" 
+          Background="{StaticResource tittleColor5}" IsReadOnly="True" VerticalGridLinesBrush="{StaticResource tittleColor1}" HorizontalGridLinesBrush="{StaticResource tittleColor1}" HeadersVisibility="Column">
+
+                <DataGrid.Resources>
+                    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="{StaticResource BlankColor2 }" />
+                    <Style TargetType="DataGridCell">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                <Setter Property="Foreground" Value="White"/>
+                                <Setter Property="FontSize" Value="14"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                    <Style TargetType="DataGridRow">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.Resources>
+
+                <DataGrid.Columns>
+                    <!--<DataGridTextColumn Header="ID Producto" Binding="{Binding ID_Producto}" />-->
+                    <DataGridTextColumn Header="Producto" Binding="{Binding NombreProducto}" Width="*"/>
+                    <DataGridTextColumn Header="Cantidad" Binding="{Binding Cantidad}" Width="*"/>
+                </DataGrid.Columns>
+                <DataGrid.ColumnHeaderStyle>
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="SeparatorVisibility" Value="Visible"/>
+                        <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
+                        <Setter Property="Height" Value="30"/>
+                        <Setter Property="FontFamily" Value="Alegreya Medium"/>
+                        <Setter Property="FontSize" Value="15"/>
+                        <Setter Property="Padding" Value="15 0 15 0"/>
+                    </Style>
+                </DataGrid.ColumnHeaderStyle>
+            </DataGrid>
+
+            <Button Content="Cerrar" Grid.Row="2"
+                            Click="Cerrar_Click"
+                            Width="130"
+                            Height="40"
+                            Margin="10"
+                            Style="{StaticResource CustomButtonStyle}"/>
+
+        </Grid>
+    </Border>
 </Window>
