Verificacio de usuario, encriptacion, tipo de usuario, Detalle compra

--- a/Hotel/View_layer/ViewNewOrder.xaml
+++ b/Hotel/View_layer/ViewNewOrder.xaml
@@ -37,6 +37,8 @@
                     <ComboBoxItem Content="Ama de Llaves"/>
                     <ComboBoxItem Content="Almacenes"/>
                     <ComboBoxItem Content="Ventas"/>
+                    <ComboBoxItem Content="Recepcion"/>
+                    <ComboBoxItem Content="Compras"/>
                 </ComboBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 0 10 0" Height="25">
