--- a/Hotel/View_layer/Login.xaml
+++ b/Hotel/View_layer/Login.xaml
@@ -122,7 +122,7 @@
                     </Button>
                 </Grid>
 
-                <StackPanel Width="300"
+                <StackPanel Width="340"
                             Grid.Row="2"
                             Orientation="Vertical"
                             Margin="0,35,0,0">
@@ -181,7 +181,8 @@
                            FontFamily="Alegreya" Background="#00000000"
                            Visibility="Hidden"/>
 
-                    <Button x:Name="btningresar"
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button x:Name="btningresar"
                             
                             Content="Ingresar"
                             FontSize="20"
@@ -189,31 +190,65 @@
                             Cursor="Hand"
                             Grid.Column="2"
                             Click="btnIngresar_Click"
-                            Margin="0,10,0,0">
+                            Margin="0,10,10,0">
 
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Setter Property="Background" Value="#1c1c1c"/>
-                                <Setter Property="Foreground" Value="{StaticResource tittleColor2}"/>
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
-                                        <Setter Property="Foreground" Value="#1c1c1c"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border Width="160" Height="38"
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Background" Value="#1c1c1c"/>
+                                    <Setter Property="Foreground" Value="{StaticResource tittleColor2}"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
+                                            <Setter Property="Foreground" Value="#1c1c1c"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Width="160" Height="38"
                                         CornerRadius="19"
                                         Background="{TemplateBinding Background}">
-                                    <ContentPresenter VerticalAlignment="Center"
+                                        <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center"/>
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Button x:Name="btnregistrar"
+                            
+                            Content="Registrarse"
+                            FontSize="20"
+                            FontFamily="Alegreya ExtraBold"
+                            Cursor="Hand"
+                            Grid.Column="2"
+                            Click="SingUP_Click"
+                            Margin="0,10,0,0">
+
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Background" Value="#1c1c1c"/>
+                                    <Setter Property="Foreground" Value="{StaticResource tittleColor2}"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource tittleColor6}"/>
+                                            <Setter Property="Foreground" Value="#1c1c1c"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Width="160" Height="38"
+                                        CornerRadius="19"
+                                        Background="{TemplateBinding Background}">
+                                        <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                    </StackPanel>
 
                     <TextBlock Text="¿Olvidaste tu contraseña?"
                                Foreground="{StaticResource tittleColor5}"
